@@ -87,6 +87,9 @@ Set or unset the user name for authentication. See the \fBuser\fP command
 below.
 .IP "--tls[=(\fIon\fP|\fIoff\fP)]"
 Enable or disable TLS encryption. See the \fBtls\fP command below.
+.IP "--tls-starttls[=(\fIon\fP|\fIoff\fP)]"
+Enable or disable the POP3 STLS command for TLS encryption. See the
+\fBtls_starttls\fP command below.
 .IP "--tls-trust-file=[\fIfile\fP]"
 Set or unset a trust file for TLS encryption. See the \fBtls_trust_file\fP
 command below.
@@ -99,9 +102,8 @@ command below.
 .IP "--tls-certcheck[=(\fIon\fP|\fIoff\fP)]"
 Enable or disable server certificate checks for TLS encryption. See the
 \fBtls_certcheck\fP command below.
-.IP "--tls-starttls[=(\fIon\fP|\fIoff\fP)]"
-Enable or disable the POP3 STLS command for TLS encryption. See the
-\fBtls_starttls\fP command below.
+.IP "--tls-force-sslv3[=(\fIon\fP|\fIoff\fP)]"
+Force TLS/SSL version SSLv3. See the \fBtls_force_sslv3\fP command below.
 .RE
 .IP "\fBOptions specific to mail retrieval mode\fP"
 .RS
@@ -287,6 +289,11 @@ eavesdroppers. A sanity check will be performed on the server certificate
 (unless the \fBtls_certcheck\fP command is used to turn this off, see below).
 To make full use of the TLS/SSL capabilities, it is recommended to use the
 \fBtls_trust_file\fP command (see below).
+.IP "tls_starttls [(\fIon\fP|\fIoff\fP)]"
+By default, TLS encryption is activated using the STLS POP3 command.  By
+disabling this, TLS encryption is immediately started instead (this is known as
+POP3 tunneled through TLS/SSL). The default port is set to 995 for this mode of
+operation.
 .IP "tls_trust_file \fIfile\fP"
 This command activates strict server certificate verification.
 .br
@@ -317,11 +324,9 @@ An empty argument disables this feature.
 By default, sanity checks are performed on server certificate(s) when TLS is
 used.  If the certificate(s) don't pass the checks, the TLS connection is
 aborted.  This command can turn the checks off. 
-.IP "tls_starttls [(\fIon\fP|\fIoff\fP)]"
-By default, TLS encryption is activated using the STLS POP3 command.  By
-disabling this, TLS encryption is immediately started instead (this is known as
-POP3 tunneled through TLS/SSL). The default port is set to 995 for this mode of
-operation.
+.IP "tls_force_sslv3 [(\fIon\fP|\fIoff\fP)]"
+Force TLS/SSL version SSLv3. This might be needed to use SSL with some old and
+broken servers. Do not use this unless you have to.
 .IP "only_new [(\fIon\fP|\fIoff\fP)]"
 By default, mpop processes only new messages (new messages are those that were
 not already successfully retrieved in an earlier session). If this option is 
